# LogArtApp/backend/api-docs/api-docs.yaml
@@ -67,11 +67,11 @@ components:
         email:
           type: string
           format: email
-          example: juan.perez@example.com
+          example: pepe@gmail.com
         password:
           type: string
           format: password
-          example: SecurePassword123
+          example: hola123
     LoginResponse:
       type: object
       properties:
@@ -129,10 +129,111 @@ components:
         message:
           type: string
           example: Logout successful
+    AllUsersResponse:
+      type: object
+      properties:
+        users:
+          type: array
+          items:
+            $ref: '#/components/schemas/User'
+        totalUsers:
+          type: integer
+          example: 50
+        currentPage:
+          type: integer
+          example: 1
+        totalPages:
+          type: integer
+          example: 10
+    FindUserByIdResponse:
+      type: object
+      properties:
+        user:
+          $ref: '#/components/schemas/User'
+        message:
+          type: string
+          example: User found
+    DeleteUserResponse:
+      type: object
+      properties:
+        message:
+          type: string
+          example: User and Data deleted successfully
+    UserProfileResponse:
+      type: object
+      properties:
+        user:
+          $ref: '#/components/schemas/User'
+        message:
+          type: string
+          example: User profile retrieved successfully
+    UpdateUserProfileRequest:
+      type: object
+      properties:
+        firstName:
+          type: string
+          example: Juan
+        lastName:
+          type: string
+          example: Pérez
+        email:
+          type: string
+          format: email
+          example: juan.perez@example.com
+        username:
+          type: string
+          example: juanperez
+        bio:
+          type: string
+          example: Nueva bio del usuario
+    UpdateUserProfileResponse:
+      type: object
+      properties:
+        user:
+          $ref: '#/components/schemas/User'
+        message:
+          type: string
+          example: User updated successfully
+    Discipline:
+      type: object
+      properties:
+        _id:
+          type: string
+          example: 60d0fe4f5311236168a109cb
+        name:
+          type: string
+          enum:
+            - Libros
+            - Canciones
+            - Videojuegos
+          example: Canciones
+        description:
+          type: string
+          example: Canciones que has escuchado
+    GetAllDisciplinesResponse:
+      type: object
+      properties:
+        disciplines:
+          type: array
+          items:
+            $ref: '#/components/schemas/Discipline'
+          minItems: 1
+          maxItems: 3
+          uniqueItems: true
+          example:
+            - _id: 60d0fe4f5311236168a109cb
+              name: Libros
+              description: Libros que has leído
+            - _id: 60d0fe4f5311236168a109cc
+              name: Canciones
+              description: Canciones que has escuchado
+            - _id: 60d0fe4f5311236168a109cd
+              name: Videojuegos
+              description: Videojuegos que has jugado
 security:
   - BearerAuth: []
 paths:
-  /auth/login:
+  /auth/:
     post:
       summary: Iniciar sesión de un usuario
       tags:
@@ -151,12 +252,14 @@ paths:
               schema:
                 $ref: '#/components/schemas/LoginResponse'
         '400':
-          description: Solicitud incorrecta
+          description: Error, ambos campos son obligatorios
         '401':
-          description: Credenciales inválidas
+          description: >-
+            Errores de autenticación, Credenciales inválidas/usuario no
+            encontrado/token inválido, cuenta sin verificación.
         '500':
           description: Error interno del servidor
-  /auth/register:
+  /users:
     post:
       summary: Registrar un nuevo usuario
       tags:
@@ -180,34 +283,41 @@ paths:
               schema:
                 $ref: '#/components/schemas/RegisterResponse'
         '400':
-          description: Solicitud incorrecta
+          description: Error, todos los campos son obligatorios
+        '401':
+          description: Errores de autenticación, usuario ya logueado
         '409':
-          description: El usuario ya existe
+          description: Error, el usuario ya existe
         '500':
           description: Error interno del servidor
-  /auth/verify/{token}:
     get:
-      summary: Verificar la cuenta de un usuario
+      summary: Obtener todos los usuarios con paginación
       tags:
-        - Autenticación
+        - Usuarios
+      security:
+        - BearerAuth: []
       parameters:
-        - in: path
-          name: token
-          required: true
+        - in: query
+          name: page
           schema:
-            type: string
-          description: Token de verificación enviado por correo electrónico
+            type: integer
+            default: 1
+          description: Número de página
+        - in: query
+          name: limit
+          schema:
+            type: integer
+            default: 5
+          description: Número de usuarios por página
       responses:
         '200':
-          description: Usuario verificado exitosamente
+          description: Lista de usuarios obtenida exitosamente
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/VerifyUserResponse'
-        '400':
-          description: Token inválido o expirado
-        '404':
-          description: Usuario no encontrado
+                $ref: '#/components/schemas/AllUsersResponse'
+        '401':
+          description: Error, Token de autenticación inválido o ausente
         '500':
           description: Error interno del servidor
   /auth/logout:
@@ -225,9 +335,158 @@ paths:
               schema:
                 $ref: '#/components/schemas/LogoutResponse'
         '401':
-          description: Token de autenticación inválido o ausente
+          description: Errores de autenticación, token vacio, token en la lista negra
+        '403':
+          description: Error, token inválido
+        '500':
+          description: Error interno del servidor
+  /disciplines:
+    get:
+      summary: Obtener todas las disciplinas
+      tags:
+        - Disciplinas
+      responses:
+        '200':
+          description: Lista de disciplinas obtenida exitosamente
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetAllDisciplinesResponse'
+        '500':
+          description: Error interno del servidor al obtener disciplinas
+  /users/{userId}:
+    get:
+      summary: Obtener un usuario por su ID
+      tags:
+        - Usuarios
+      security:
+        - BearerAuth: []
+      parameters:
+        - in: path
+          name: userId
+          required: true
+          schema:
+            type: string
+          description: ID del usuario a buscar
+      responses:
+        '200':
+          description: Usuario encontrado exitosamente
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FindUserByIdResponse'
+        '400':
+          description: Error, formato de ID de usuario inválido
+        '401':
+          description: Error, no autorizado para acceder a este usuario
+        '403':
+          description: Error, Solo admin puede buscar usuarios
+        '404':
+          description: Usuario no encontrado
+        '500':
+          description: Error interno del servidor
+    delete:
+      summary: Eliminar un usuario por su ID
+      tags:
+        - Usuarios
+      security:
+        - BearerAuth: []
+      parameters:
+        - in: path
+          name: userId
+          required: true
+          schema:
+            type: string
+          description: ID del usuario a eliminar
+      responses:
+        '200':
+          description: Usuario y datos eliminados exitosamente
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DeleteUserResponse'
+        '400':
+          description: Error, formato de ID de usuario inválido
+        '401':
+          description: >-
+            Error, no autorizado para eliminar este usuario o eliminar cuenta
+            propia
+        '403':
+          description: Error, token de autenticación inválido o ausente
+        '404':
+          description: Error, usuario no encontrado
+        '500':
+          description: Error interno del servidor
+  /users/profile:
+    get:
+      summary: Obtener el perfil del usuario autenticado
+      tags:
+        - Usuarios
+      security:
+        - BearerAuth: []
+      responses:
+        '200':
+          description: Perfil del usuario obtenido exitosamente
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserProfileResponse'
+        '400':
+          description: Error, formato de ID de usuario inválido
+        '404':
+          description: Error, usuario no encontrado
+        '500':
+          description: Error interno del servidor
+    put:
+      summary: Actualizar el perfil del usuario autenticado
+      tags:
+        - Usuarios
+      security:
+        - BearerAuth: []
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                firstName:
+                  type: string
+                  example: Juan
+                lastName:
+                  type: string
+                  example: Pérez
+                email:
+                  type: string
+                  format: email
+                  example: juan.perez@example.com
+                username:
+                  type: string
+                  example: juanperez
+                bio:
+                  type: string
+                  example: Nueva bio del usuario
+                profileImage:
+                  type: string
+                  format: binary
+                  description: Imagen de perfil del usuario
+      responses:
+        '200':
+          description: Perfil del usuario actualizado exitosamente
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UpdateUserProfileResponse'
+        '400':
+          description: Formato de ID de usuario inválido
+        '404':
+          description: Usuario no encontrado
         '500':
           description: Error interno del servidor
 tags:
   - name: Autenticación
     description: Operaciones relacionadas con la autenticación de usuarios
+  - name: Disciplinas
+    description: Operaciones relacionadas con las disciplinas
+  - name: Usuarios
+    description: Operaciones relacionadas con la gestión de usuarios
